# kspr

./: Cargo.toml  README.md
scripts/: benchmark.sh
shaders/: crack.wgsl
src/: cpu_verify.rs  gpu.rs  kdf.rs  keyparser.rs  main.rs  progress.rs  wordgen.rs
